--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "./node_modules/.bin/nx lint && ng lint",
     "e2e": "ng e2e",
-    "affected:apps": "./node_modules/.bin/nx affected:apps HEAD~1 HEAD",
+    "affected:apps":
+      "./node_modules/.bin/nx affected:apps $(git merge-base origin/master HEAD) HEAD",
     "affected:build": "./node_modules/.bin/nx affected:build",
     "affected:e2e": "./node_modules/.bin/nx affected:e2e",
     "affected:test": "./node_modules/.bin/nx affected:test",
